// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  <p>
    Filter: 
    test
  </p>
  <ul>
    <p>
      No expenses
    </p>
  </ul>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  <p>
    Filter: 
    test
  </p>
  <ul>
    <ExpenseListItem
      amount={195}
      createdAt={"1970-01-01T00:00:00.000Z"}
      description="Gum"
      id="1"
      key="0"
      note=""
    />
    <ExpenseListItem
      amount={1095}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={864000000}
      description="Credit card"
      id="3"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={200}
      createdAt={-172800000}
      description="Monitor"
      id="4"
      key="3"
      note=""
    />
  </ul>
</div>
`;
